Improve logic that looks to see if a book already exists